3P: scrapped websites info ; Bookmarks: homapage z-index issue ; Jeveuxaider scrapped: remove cards

--- a/public/css/project_card.css
+++ b/public/css/project_card.css
@@ -3,6 +3,8 @@
 .project-card {
     display: inline-block;
     position: relative;
+    z-index: 0;
+    isolation: isolate;
     width: 300px;
     height: 358px;
     overflow: hidden;
